Switch to use fixed positioning for the graph selection pane
Absolute positioning made scrolling on windows really choppy for some reason.
This changes to use fixed positioning.

Previously we manually moved the selection pane vertically to compensate for
scroll. Now the browser automatically moves it, and instead we have manually
move it out of view when scrolling right.

This has the same affect as before, but isn't choppy on windows

--- a/util/test/perf/perfgraph.css
+++ b/util/test/perf/perfgraph.css
@@ -34,7 +34,7 @@ div.lspacer {
 .graphSelectionPane {
     padding-left: 20px;
     padding-right: 20px;
-    position:absolute;
+    position:fixed;
     vertical-align: top;
     border-right: 1px solid black;
 }
